# simplefit

./: .gitignore  README.md  pyproject.toml
examples/: fitting_example.ipynb  fitting_example_cube.ipynb  fitting_example_cube_bigger.ipynb  fitting_phangs_hi.py  fitting_post_phangs_hi.py
references/: carta_fitting_heuristics.ts
src/simplefit/: __init__.py  cube_fitting.py  spectrum_fitting.py
tests/: test_fit_config.py
